mock the left nav

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,4 +3,6 @@
 @import "helpers/functions";
 @import "helpers/mixins";
 @import "helpers/helpers";
+@import "base/typography";
 @import "layout/layout";
+@import "layout/left.navigation";
