--- a/src/css/main.css
+++ b/src/css/main.css
@@ -393,6 +393,10 @@ th {
   padding: 0;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Lora", serif;
+}
+
 body,
 html {
   height: 100%;
@@ -410,6 +414,7 @@ html {
   width: calc(100% - 50px);
   height: 100% !important;
   left: 50px;
+  z-index: 10;
 }
 .layout__top {
   position: relative;
@@ -630,4 +635,208 @@ html {
   -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+}
+
+.left-bar {
+  position: fixed;
+  z-index: 20;
+  width: 100%;
+  height: auto;
+  min-height: 100%;
+}
+.left-bar--collapsed {
+  width: 50px;
+}
+.left-bar__overlay {
+  position: fixed;
+  z-index: 80;
+  display: none;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background-color: #000;
+}
+.left-bar__thin {
+  position: fixed;
+  z-index: 90;
+  left: 0;
+  width: 50px;
+  height: 100%;
+  background-color: #441C16;
+  -webkit-perspective: 1700px;
+          perspective: 1700px;
+  -webkit-perspective-origin: 0 50%;
+          perspective-origin: 0 50%;
+}
+.left-bar__wide {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: -700px;
+  overflow: hidden;
+  width: 700px;
+  height: 100%;
+  background-color: #fff;
+}
+.left-bar__close {
+  position: fixed;
+  z-index: 99;
+  top: 0;
+  left: 0;
+  -webkit-perspective: 1700px;
+          perspective: 1700px;
+  -webkit-perspective-origin: 0 50%;
+          perspective-origin: 0 50%;
+}
+.left-bar__close .close-button {
+  position: fixed;
+  top: 0;
+  left: -50px;
+  display: block;
+  transition: background-color 250ms ease-in-out;
+  -webkit-transform: rotateY(90deg);
+          transform: rotateY(90deg);
+  -webkit-transform-origin: 0 0;
+      -ms-transform-origin: 0 0;
+          transform-origin: 0 0;
+  background-color: #441C16;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+.left-bar__close .close-button:hover {
+  background-color: #592F28;
+}
+
+.logo {
+  width: 100%;
+  transition: background-color 250ms ease-in-out;
+  -webkit-transform: rotateY(0deg);
+          transform: rotateY(0deg);
+  -webkit-transform-origin: 0 0;
+      -ms-transform-origin: 0 0;
+          transform-origin: 0 0;
+  background-color: #441C16;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+.logo__image {
+  display: block;
+  width: 50px;
+  height: 124px;
+  text-indent: -9999px;
+  color: transparent;
+  background: #441C16 url("../images/th-logo.svg") no-repeat center center;
+}
+.logo:hover {
+  background-color: #2E0D08;
+}
+
+.spread-menu {
+  position: relative;
+  height: 100%;
+  text-align: center;
+}
+.spread-menu__header {
+  padding: 1em 0;
+}
+
+.logo-header__image {
+  display: inline-block;
+  width: 144px;
+  height: 120px;
+  text-indent: -9999px;
+  background: url("../images/th-logo-wide.svg") no-repeat center center;
+}
+
+.nav-types {
+  padding: 1em;
+  border-top: 1px solid #EBEBEB;
+  border-bottom: 1px solid #EBEBEB;
+  background: #FFFFFF;
+}
+.nav-types__title {
+  display: inline-block;
+  text-transform: uppercase;
+}
+
+.type-list {
+  display: table;
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+}
+.type-list__item {
+  display: table-cell;
+  vertical-align: middle;
+  background: transparent;
+}
+
+.type-item {
+  display: inline-block;
+  overflow: hidden;
+  height: auto;
+}
+.type-item__name {
+  font-size: 12px;
+  display: inline-block;
+  text-transform: uppercase;
+  color: #666666;
+}
+.type-item__name:hover {
+  color: #A6833C;
+}
+
+.social-media {
+  padding: 1em 0;
+}
+.social-media__title {
+  font-size: 14px;
+  margin-bottom: 1em;
+}
+.social-media__item {
+  line-height: 32px;
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  text-align: center;
+  color: white;
+  border-radius: 50%;
+  background: #A6833C;
+}
+.social-media__item:hover {
+  text-decoration: none;
+  color: white;
+  background-color: #CBAB68;
+}
+
+.footer {
+  padding: 1em;
+  color: #441C16;
+  border-top: 1px solid #EBEBEB;
+}
+
+.footer-links {
+  display: table;
+  width: 100%;
+  text-align: center;
+}
+.footer-links__item {
+  font-family: "Lora", serif;
+  font-size: 11px;
+  display: inline-block;
+  padding: 0 .5em;
+  vertical-align: middle;
+  letter-spacing: .1em;
+  text-transform: uppercase;
+  color: #666666;
+}
+.footer-links a {
+  font-family: "Lora", serif;
+  font-size: 11px;
+  display: inline-block;
+  text-transform: uppercase;
+  color: #666666;
+}
+.footer-links a:hover {
+  color: #441C16;
 }
