--- a/src/sass/helpers/_functions.scss
+++ b/src/sass/helpers/_functions.scss
@@ -7,3 +7,11 @@
 @function color($color-name, $tone: base) {
   @return map_get(map_get($colors, $color-name), $tone);
 }
+
+@function headings($from:1, $to:6) {
+    @if $from == $to {
+        @return 'h#{$from}';
+    } @else {
+        @return 'h#{$from},' + headings($from+1, $to);
+    }
+}
