--- a/src/sass/layout/_layout.scss
+++ b/src/sass/layout/_layout.scss
@@ -15,6 +15,7 @@ html {
 	width: calc(100% - 50px);
 	height: 100% !important;
 	left: 50px;
+	z-index: 10;
 	@include element ('top') {
 		position: relative;
 		padding: 1em;
