add timeline and views

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,3 @@
-@import 'base/reset';
 @import "helpers/variables";
 @import "helpers/functions";
 @import "helpers/mixins";
@@ -6,3 +5,4 @@
 @import "base/typography";
 @import "layout/layout";
 @import "layout/left.navigation";
+@import "layout/timeline";
