--- a/src/sass/layout/_layout.scss
+++ b/src/sass/layout/_layout.scss
@@ -10,29 +10,47 @@ html {
 	padding: 0;
 }
 
-.layout {
+.layout
+{
 	position: absolute;
+	z-index: 10;
+	left: 50px;
+
 	width: calc(100% - 50px);
 	height: 100% !important;
-	left: 50px;
-	z-index: 10;
-	@include element ('top') {
+
+	@include element ('header')
+	{
 		position: relative;
-		padding: 1em;
-		height: 40px;
+
+		padding: 1em 0;
+
 		border-bottom: 1px solid color('white','shade');
 	}
-	@include element ('row') {
+	@include element ('body')
+	{
 		position: relative;
+
 		height: 100%;
-		@include element('col') {
-			position: relative;
-			width: 50%;
-			float: left;
-			padding: 1em;
+	}
+	@include element('col')
+	{
+		position: relative;
+
+		float: left;
+
+		box-sizing: border-box;
+		width: 50%;
+		height: 100%;
+		padding: 1em;
+
+		@include modifier('left')
+		{
+			border-right: 1px solid color('white','shade');
 		}
 	}
 }
+
 .diable-selection {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
