--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,4 +5,6 @@
 @import "base/typography";
 @import "layout/layout";
 @import "layout/left.navigation";
+@import "components/backslider";
+@import "pages/home";
 @import "layout/timeline";
