--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,9 +1,46 @@
 <!-- Layout Body -->
-<div class="layout__body">
+<div class="layout__body layout__body--whit-slider">
 	<div class="layout__col layout__col--left">
-		<h1>Slider goes here</h1>	
+		<div backslider options="sliderOption" source="vm.slides" class="backslider">
+			<ul class="bs-slides">
+				<li ng-repeat="slide in vm.slides">
+					<div class="bs-caption bs-caption--{{ slide.position }}">
+						<h2 class="bs-caption__heading">{{ slide.heading }}</h2>
+						<p class="bs-caption__txt">{{ slide.text }}</p>
+						<a ui-sref="timeline.type" class="cta-btn">{{ slide.action }}</a>
+					</div>
+					<img ng-src="{{ slide.image }}" alt="">
+				</li>
+			</ul>
+		</div>
 	</div>
-	<div class="layout__col">
-		How it works this page
+	<div class="layout__col layout__col--right">
+		<div class="about">
+			<div class="about__header">
+				<div class="logo-header">
+						<a ui-sref="home" class="logo-header__image">Tequila Hacienda Maravatio</a>
+					</div>
+			</div>
+			<div class="about__txt">
+			<span class="divider"></span>
+				<p>
+					En Tequila Hacienda Maravatio reconocemos que existen momentos inolvidables, cosas inexplicables y personas incomparables aunado a ello queremos que estos recuerdos perduren para siempre.
+				</p>
+
+				<p>
+					Tenemos una manera única, genial y especial para que esto sea posible, ahora puedes personalizar la etiqueta de la botella de tu tequila sea blanco o reposado.
+				</p>
+				<span class="divider"></span>
+				<h4 class="about__heading">Los pasos a realizar son muy sencillos</h4>
+				<ul>
+					<li>El primero es la selección del tipo de tequila.</li>
+					<li>Segundo determinar presentación y el número de botellas de tequila que requieres.</li>
+					<li>tercero personalizar tu etiqueta en base al evento que tendras.</li>
+					<li>por ultimo seleccionar tu forma de pago</li>
+				</ul>
+				<span class="divider"></span>
+				<a ui-sref="timeline.type" class="cta-btn">Personaliza ahora</a>
+			</div>
+		</div>	
 	</div>
 </div>
