--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,12 @@
 h1, h2, h3, h4, h5, h6 {
   font-family: "Lora", serif;
+  color: #666666;
+}
+
+p, li, span, a {
+  font-family: "Lora", serif;
+  line-height: 24px;
+  color: #666666;
 }
 
 body,
@@ -448,6 +455,132 @@ html {
 }
 .footer-links a:hover {
   color: #441C16;
+}
+
+.backslider {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.backslider .bs-overlay {
+  display: none;
+}
+
+.bs-caption {
+  position: absolute;
+  z-index: 20;
+  top: 1em;
+  width: 350px;
+  height: 200px;
+  padding: 1em;
+  background: transparent;
+}
+.bs-caption--top-right {
+  right: 0;
+}
+.bs-caption--top-left {
+  left: 84px;
+}
+.bs-caption__heading {
+  margin-top: 0;
+  text-transform: uppercase;
+  color: #2E0D08;
+}
+.bs-caption__txt {
+  font-size: 16px;
+  line-height: 24px;
+  color: #2E0D08;
+}
+.bs-caption .cta-btn {
+  color: white;
+  border: 0;
+  background-color: #CBAB68;
+}
+
+.layout__body--whit-slider .layout__col--left {
+  position: fixed;
+  z-index: 1;
+  left: 1em;
+  width: 68%;
+  padding: 0;
+}
+.layout__body--whit-slider .layout__col--right {
+  z-index: 5;
+  float: right;
+  overflow: hidden;
+  width: 32%;
+  height: auto;
+  background-color: white;
+}
+.layout__body--whit-slider .logo-header {
+  text-align: center;
+}
+
+.divider {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 1px;
+  margin: 1em 0;
+  background-color: #A6833C;
+}
+.divider:after {
+  position: absolute;
+  top: -5px;
+  left: 50%;
+  display: block;
+  width: 10px;
+  height: 10px;
+  margin-left: -5px;
+  content: '';
+  border: 1px solid #A6833C;
+  border-radius: 50%;
+  background: white;
+}
+
+.quote {
+  text-align: center;
+  color: #441C16;
+  border-left: 0;
+}
+.quote__heading {
+  font-size: 18px;
+  margin: 0;
+}
+
+.cta-btn {
+  font-weight: 600;
+  letter-spacing: .1em;
+  text-transform: uppercase;
+  color: white;
+  display: inline-block;
+  background: #CBAB68;
+  border: 0 solid #A6833C;
+  padding: 0.5em 3em;
+  margin: 1em 0;
+  cursor: pointer;
+  transition: all 2ms ease-in-out;
+}
+.cta-btn:hover {
+  background-color: #937435;
+  color: white;
+  text-decoration: none;
+}
+
+.about__heading {
+  margin-bottom: 1em;
+  text-align: center;
+  text-transform: uppercase;
+  color: #A6833C;
+  letter-spacing: 0.10em;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 18px;
+  margin: 0;
+}
+.about .cta-btn {
+  width: 100%;
+  text-align: center;
 }
 
 .timeline {
