--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -3,4 +3,10 @@ $serif_stack : 'Lora', serif;
 
 #{headings(1,6)} {
   font-family: $serif-stack;
+  color: color('gray');
+}
+p, li, span , a {
+	font-family: $serif-stack;
+	line-height: 24px;
+	color: color('gray');
 }
