home page finished

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -9,7 +9,7 @@
 						<p class="bs-caption__txt">{{ slide.text }}</p>
 						<a ui-sref="timeline.type" class="cta-btn">{{ slide.action }}</a>
 					</div>
-					<img ng-src="{{ slide.image }}" alt="">
+					<img ng-src="{{ slide.image }}" alt="{{ slide.text }}">
 				</li>
 			</ul>
 		</div>
