--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,3 +8,5 @@
 @import "components/backslider";
 @import "pages/home";
 @import "layout/timeline";
+@import "pages/type";
+@import "pages/version";
