--- a/src/app/version/version.html
+++ b/src/app/version/version.html
@@ -4,13 +4,13 @@
 		<div class="type">
 			<div class="type__body">
 				<figure>
-					<img ng-src="{{ vm.version.img_zoom_size }}" alt="{{  }}" height="580">
+					<img ng-src="{{ vm.version.img_zoom_size }}" height="580">
 				</figure>
 			</div>
 			<div class="type__footer">
 				<a href="" class="type__name"><h2>{{ vm.types[0].name}}</h2></a>
 			</div>
-		</div>	
+		</div>
 	</div>
 	<div class="layout__col">
 		<div class="version">
