--- a/src/app/event/event.html
+++ b/src/app/event/event.html
@@ -1,5 +1,5 @@
 <div class="layout__body">
-    <div class="layout__col layout__col--wide">
+    <div class="layout__col layout__col--wide layout__col--header">
         <div class="events">
             <form novalidate>
                 <div class="form-group">
@@ -9,25 +9,27 @@
                             ng-options="event as event.name for event in events | orderBy:'name'"
                             ng-model="event"
                             ng-change="getTemplates(event.id)">
-
                     </select>
                 </div>
             </form>
         </div>
     </div>
-    <div class="layout__col layout__col--wide">
+    <div class="layout__col layout__col--wide layout__col--body">
+        <h3 class="carousel-title">Selecciona la plantilla que más te guste</h3>
         <div j-carousel="carousel" source="templates" class="jcarousel-wrapper">
             <div class="jcarousel">
                 <ul>
-                    <li ng-repeat="template in templates">
-                        <img ng-src="{{template.timage}}" alt=""/>
+                    <li ng-repeat="template in templates" ng-model="template">
+                        <a ui-sref="timeline.design"  ng-click="save(template)">
+                            <img ng-src="{{template.timage}}" alt="" width="168" />
+                        </a>
                     </li>
                 </ul>
             </div>
         </div>
-        <div>
-            <button class="btn btn-primary" ng-click="carousel.prev()">Prev</button>
-            <button class="btn btn-primary" ng-click="carousel.next()">Next</button>
+        <div class="jcarousel-controls">
+            <button class="cta-btn" ng-click="carousel.prev()"><i class="fa fa-chevron-left"></i></button>
+            <button class="cta-btn" ng-click="carousel.next()"><i class="fa fa-chevron-right"></i></button>
         </div>
     </div>
 </div>
