--- a/src/app/version/version.html
+++ b/src/app/version/version.html
@@ -40,7 +40,7 @@
 		        <label class="form-item-label">No. de Cajas</label>
 		        <input type="text" class="form-control form-item-control" ng-model="vm.box" name="box"/>
 		      </div>
-		      <a ui-sref="timeline.event"  class="pull-right cta-btn">Siguiente</a>
+		      <a ui-sref="timeline.event" ng-click="vm.save()" class="pull-right cta-btn">Siguiente</a>
 		    </form>
 		  </div>
 		</div>
