--- a/src/css/main.css
+++ b/src/css/main.css
@@ -502,6 +502,21 @@ html {
   background-color: #CBAB68;
 }
 
+.jcarousel {
+  position: relative;
+  overflow: hidden;
+}
+.jcarousel ul {
+  position: relative;
+  width: 20000em;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.jcarousel li {
+  float: left;
+}
+
 .layout__body--whit-slider .layout__col--left {
   position: fixed;
   z-index: 1;
@@ -671,36 +686,40 @@ html {
   margin: 1em 0;
 }
 
-/*
-This is the visible area of you carousel.
-Set a width here to define how much items are visible.
-The width can be either fixed in px or flexible in %.
-Position must be relative!
-*/
-.jcarousel {
-  position: relative;
-  overflow: hidden;
-}
-
-/*
-This is the container of the carousel items.
-You must ensure that the position is relative or absolute and
-that the width is big enough to contain all items.
-*/
-.jcarousel ul {
-  width: 20000em;
-  position: relative;
-  /* Optional, required in this case since it's a <ul> element */
-  list-style: none;
-  margin: 0;
+.layout__col--wide {
+  width: 100%;
   padding: 0;
+  float: none;
 }
-
-/*
-These are the item elements. jCarousel works best, if the items
-have a fixed width and height (but it's not required).
-*/
-.jcarousel li {
-  /* Required only for block elements like <li>'s */
-  float: left;
+.layout__col--header {
+  width: 600px;
+  height: auto;
+  overflow: hidden;
+  margin: 2em auto;
+}
+.layout__col--body {
+  width: 600px;
+  margin: 4em auto;
+}
+.layout .carousel-title {
+  text-transform: uppercase;
+  font-size: 14px;
+  text-align: center;
+  letter-spacing: 0.1em;
+  margin: 0 0 1em 0;
+}
+.layout .jcarousel-controls {
+  text-align: center;
+}
+.layout .jcarousel-controls * {
+  outline: none;
+}
+.layout .jcarousel-wrapper {
+  border: 1px solid #EBEBEB;
+}
+.layout .jcarousel li {
+  padding: 16px;
+  height: auto;
+  overflow: hidden;
+  cursor: pointer;
 }
