--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,8 +5,10 @@
 @import "base/typography";
 @import "layout/layout";
 @import "layout/left.navigation";
+@import "components/bootstrap";
 @import "components/backslider";
 @import "components/jcarousel";
+@import "components/loadingbar";
 @import "pages/home";
 @import "layout/timeline";
 
