--- a/src/app/design/design.html
+++ b/src/app/design/design.html
@@ -1,28 +1,93 @@
 <!-- Layout Body -->
 <div class="layout__body">
-	<div class="layout__col layout__col--left">
-		
-	</div>
-	<div class="layout__col">
-		<div class="widgets">
-			<!-- Widget Uploader -->
-			<div class="widgets__item">
-				<form ng-controller="UploadController">
-					<div class="form-group">
-						<label for="file-input-image" class="widget__label">
-						<i class="fa fa-upload"></i>
-							Cargar imagen 
-							
-						</label>
-						<input type="file" id="file-input-image"
-								name="file-input-image" 
-								file-input="files" multiple
-						class="form-control">
-					</div>
-					<button class="btn btn-primary" 
-						ng-click="upload()">Subir archivo </button>
-				</form>
-			</div>
-		</div>
-	</div>
+    <div class="layout__col layout__col--left">
+        <div class="design-label">
+            <div style="width: 400px; height: 400px; background-color:#11ffae;">
+                <h1>La imagen debe cargar aqui..!</h1>
+                <img src="images/etiqueta.png" alt="" class="img-responsive"/>
+                <img tq-transporter="design" source="design.image" class="img-responsive"/>
+            </div>
+            <div class="image-preview">
+
+            </div>
+        </div>
+    </div>
+    <div class="layout__col">
+        <div class="widgets">
+            <!-- Widget Uploader -->
+            <div class="widget widget--upload" ng-controller="UploadController">
+                <form>
+                    <div class="form-group">
+                        <label for="file-input-image" class="widget__label"> <span class="widget__step">1</span>Cargar
+                            Imagen</label>
+
+                        <div class="widget__field">
+                            <input type="file" id="file-input-image"
+                                   name="file-input-image"
+                                   file-input="files" multiple
+                                   class="form-control"/>
+                            <button class="btn btn-primary btn-upload"
+                                    ng-click="uploadFile()">Subir archivo
+                            </button>
+                        </div>
+                    </div>
+                    <pre>{{image | json}}</pre>
+                </form>
+
+                <hr/>
+            </div>
+            <!--Image Transform-->
+            <div class="widget widget--transform" ng-controller="TransformController">
+                <span class="widget__label">
+                    <span class="widget__step">2</span>Transformar Imagen</span>
+                </span>
+                <div class="widget__field">
+                    <div class="zoom">
+                        Zoom goes here
+                    </div>
+                    <div class="range">
+                        Range goes here
+                    </div>
+                </div>
+
+            </div>
+            <hr/>
+            <!--Tag custom texts-->
+            <div class="widget widget--custom-text" ng-controller="CustomTextController">
+                <span class="widget__label">
+                    <span class="widget__step">3</span>
+                    Texto Personalizado
+                </span>
+                <div class="widget__field">
+                    <form  class="form-horizontal font__form">
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">Titulo:</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" ng-model="design.headline"/>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">Fuente:</label>
+                            <div class="col-sm-10">
+                                <select class="form-control"
+                                        ng-model="design.font"
+                                        ng-options="font as font.name for font in fontStack" ng-class="font.stack">
+
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">Color:</label>
+                            <div class="col-sm-10">
+                                <div class="col-sm-10">
+                                    <input type="text" ng-model="design.color" class="form-control">
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
